@@ -147,7 +147,7 @@ span.doc_lang	{display:inline-block; vertical-align:top; margin:10px 8px 0 0; co
 span.rep_type	{display:inline-block; vertical-align:middle; color:#CCC; font-size:12px; margin-left:5px;}
 span.doc_cat,
 span.doc_rec,
-span.doc_date	{display:inline-block; vertical-align:top; margin:5px 5px 0 0; color:#CCC; font-size:13px; background-color:rgba(72,79,86,0.6); border-radius:4px; padding:1px 4px 0px 4px; line-height:1.5em;}
+span.doc_date	{display:inline-block; vertical-align:top; margin:5px 5px 0 0; color:#CCC; font-size:13px; background-color:rgba(72,79,86,0.6); border-radius:4px; padding:0px 4px; line-height:1.5em;}
 span.doc_date	{background-color:rgba(48,71,103,1);}
 span.doc_rec	{background-color:rgba(22,24,37,0.6);}
 
@@ -227,7 +227,7 @@ table.budget tr th.status,
 table.budget tr td.status			{width:170px;}
 table.budget tr th.value,
 table.budget tr td.value			{width:160px; padding-right:20px;}
-table.budget tr:last-of-type td		{border:0; padding-bottom:30px;}	/*	Remove border-bottom from last row of tables	*/
+table.budget tr:last-of-type td		{border:0;}	/*	Remove border-bottom from last row of tables	*/
 
 .wrap_planned_disbursement table.budget tr th.provider,
 .wrap_planned_disbursement table.budget tr td.provider	{width:200px; padding-right:30px;}
@@ -334,10 +334,12 @@ table.budget.act_trans th.date,
 table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 
 /*	IATI ACTIVITY RESULT TABLE	*/
+.wrap_result_table							{padding-bottom:20px;}
 .wrap_result th.result_indi,
 .wrap_result td.result_indi					{width:300px; padding-right:40px;}
 .wrap_result th.result_percent,
 .wrap_result td.result_percent				{width:100px;}
+.wrap_result td.result_base					{position:relative;}
 .wrap_result td.result_base,
 .wrap_result td.result_target,
 .wrap_result td.result_actual,
@@ -354,21 +356,23 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .result_indicator_title						{padding-bottom:10px; border-bottom:1px solid #aaa; margin-bottom:10px; font-size:14px; font-weight:normal; color:#CCC; line-height:1.35em; }
 .wrap_result_indi_ref						{padding-bottom:15px;}
 .result_indi_head							{font-size:11px; border-bottom:1px solid #4d5264; color:#ccc;}
-.result_indi_desc							{padding-top:5px; font-size:14px; line-height:16px; color:#ddd;}
-.result_indi_ref							{padding:10px 0; font-size:11px; line-height:13px; border-bottom:1px dotted #666;}
+.result_indi_desc							{padding-top:5px; font-size:14px; line-height:18px; color:#ddd;}
+.result_indi_ref							{padding:5px 0 10px 0; font-size:11px; line-height:13px; border-bottom:1px dotted #666;}
 .result_indi_ref:last-of-type				{border:0; padding-bottom:0;}
 .result_indi_ref .ref						{display:inline-block; vertical-align:top; font-size:9px; min-width:35px;}
 .result_indi_ref .type						{margin:0; font-size:9px;}
 .result_period_time							{background-color:#253860; min-height:17px; line-height:17px; margin-bottom:4px; text-align:center; max-width:155px;}
-.result_indicator .wrap_document			{margin:10px 0 0 0;}
+.result_indicator .wrap_document			{margin:0 0 10px 0;}
 .result_indicator .header_doc				{display:none;}
 .result_indicator a.doc_link				{padding:5px; font-size:8px; line-height:1em;}
 .result_indicator .wrap_doc_link			{position:relative; margin-left:20px; display:block; padding:0; margin-top:-15px;}
-.result_indicator span.doc_title			{font-size:12px; max-width:203px;}
-.result_indicator span.doc_format			{font-size:9px; max-width:100px; margin-left:0; position:absolute; top:0; right:0; padding:2px 5px 5px 5px;}
+.result_indicator span.doc_title			{display:block; font-size:11px;}
+.result_indicator span.doc_format			{font-size:9px; margin-left:0; margin-top:3px; padding:2px 5px 5px 5px;}
 .result_indicator span.doc_cat,
 .result_indicator span.doc_rec,
-.result_indicator span.doc_date				{font-size:11px;}
+.result_indicator span.doc_lang,
+.result_indicator span.doc_date				{font-size:10px; margin:3px 3px 0 0;}
+.result_indicator span.doc_lang				{padding-top:1px; line-height:1.5em;}
 .wrap_result .sector_list_wrap				{color:#ccc; padding:0 0 10px 0;}
 .wrap_result .header.glossary				{margin-bottom:10px;}
 .wrap_result table.budget td				{vertical-align:middle; padding:5px 0;}
@@ -386,6 +390,7 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .result_date_bar							{position:relative; background-color:#000; height:5px; max-height:5px; border-bottom:1px solid #666; border-right:1px solid #666;}
 .result_date_overlay						{background-color:#9d8c55; height:5px; max-height:5px;}
 .result_date								{position:absolute; top:0px; left:0; width:150px;}
+.result_base_year							{font-size:11px; color:#ddd; position:absolute; left:-30px; top:50%; font-style:italic; max-height:25px; transform:translateY(-50%) rotate(-90deg); -webkit-transform:translateY(-50%) rotate(-90deg);}
 
 /*	IATI ACTIVITY POLICY MARKER TABLE	*/
 .wrap_policy_marker table.budget th.policy_code,
